deploy/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: talos-system
  labels:
    name: talos-system
    # Environment label added in overlays
